FIX - Flicker effect on animation start

--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -47,6 +47,8 @@
     grid-template-rows: 100%;
     grid-template-areas: 'gallery';
 
+    opacity: 0;
+
     img {
       width: 100%;
       height: 100%;
